# air-drive

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  install.sh  rustfmt.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  labels.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
assets/applications/: air-drive-open-shortcut.desktop
assets/mime/: air-drive-shortcuts.xml
assets/nautilus/: air-drive-overlay.py
assets/systemd/: air-drive.service
docs/: README.md  roadmap.md
docs/dev/: architecture.md  development.md  state-schema.md  sync-model.md
docs/guide/: configuration.md
docs/internals/: sync-model.md
docs/roadmap/: 010-rclone-token-refresh.md  020-folder-rename-move-propagation.md  020-propagate-empty-directories.md  030-folder-rename-move-propagation.md  030-propagate-empty-directories.md  040-trashed-file-restore-duplicate.md  050-rclone-auto-download.md  060-bulk-initial-sync.md  060-native-google-docs.md  070-interactive-setup.md  080-surface-recovered-state.md  090-symlinks.md  100-multi-mapping.md  110-shared-drives-shortcuts.md  120-multi-account.md  130-drive-only-metadata.md  140-desktop-ui.md  150-desktop-shell-integration.md  160-cross-platform.md  170-v1-bundles.md  180-oauth-production.md  190-native-engine.md  200-streaming-mode.md  README.md
docs/user/: cli.md  configuration.md  installation.md  oauth-setup.md
examples/: setup_e2e.rs
specs/001-minimal-sync-daemon/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-minimal-sync-daemon/checklists/: quality.md  requirements.md
specs/001-minimal-sync-daemon/contracts/: cli.md  config.md  status.schema.json
specs/002-uninstall-service-flag/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-uninstall-service-flag/checklists/: requirements.md
specs/002-uninstall-service-flag/contracts/: cli-uninstall-service.md
src/: error.rs  lib.rs  main.rs  observability.rs
src/cli/: init.rs  interactive.rs  link.rs  map.rs  mod.rs  pause.rs  resume.rs  runtime.rs  setup.rs  shell.rs  start.rs  status.rs  stop.rs  unlink.rs
src/config/: migrate.rs  mod.rs  paths.rs
src/daemon/: file_status.rs  in_flight.rs  lock.rs  mod.rs  pause.rs  runtime.rs
src/drive/: auth.rs  changes.rs  http.rs  metadata.rs  mod.rs
src/engine/: http.rs  mod.rs  rclone.rs  rclone_download.rs  rclone_path.rs  staging.rs
src/reconcile/: conflict.rs  continuous.rs  fingerprint.rs  mod.rs  shortcut.rs
src/state/: accounts.rs  conflicts.rs  cursor.rs  items.rs  mapping.rs  meta.rs  mod.rs  ops.rs  schema.rs
src/watch/: debounce.rs  mod.rs
tests/e2e/: README.md  rclone_drive.rs
tests/e2e/common/: mod.rs
tests/integration/: conflict.rs  continuous_sync.rs  initial_sync.rs  missing_local_root.rs  multi_instance.rs  recovery.rs  relink.rs  setup_uninstall_service.rs  status.rs  sync_matrix.rs
tests/integration/common/: mod.rs
tests/integration/fixtures/: status.schema.json
